# level-up-llm-skill-analyzer

./: .gitignore  CLAUDE.md  CTP_template.txt  KNOWN_ISSUES.md  README.md  TASKS.md  app_fastapi.py  check_setup.py  checkpoint.md  extract_job_skills.py  extract_skills.py  frontend.md  generate_cover_letter.py  generate_report.py  pdf_resume_parser.py  recommend_courses.py  recommend_projects.py  requirements.txt  resume_8334_Ahmed Ali_resume_cleaned.txt  score_skills_match.py  skill_normalization.py  skillbridge-backend-design.md  vercel.json
backend/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  audit_report.json  docker-compose.yml  pyproject.toml  railway.toml  railway.worker.toml
backend/.github/workflows/: ci.yml
backend/alembic/: env.py
backend/alembic/versions/: 1cea5f98e020_courses_course_skills_course_embeddings.py  b2f4a1c7d3e8_users_skills_skill_aliases_user_skills.py  c3d5e7f9a1b2_resumes_runs_plans.py  d4e6f8a0b2c3_job_postings_job_skills.py  e5f7a9b1c3d4_llm_calls.py  f6a8b0c2d4e6_resumes_filename.py
backend/app/: config.py  deps.py  guest_runs.py  health.py  main.py  observability.py
backend/app/api/: analyze.py  auth.py  dashboard.py  health.py  jobs.py  plans.py
backend/app/auth/: google.py  sessions.py
backend/app/common/: csrf.py  errors.py  files.py  html.py  rate_limit.py
backend/app/db/: __init__.py  engine.py  redis.py
backend/app/greenhouse/: client.py
backend/app/llm/: client.py  cost_ledger.py  embeddings.py
backend/app/models/: __init__.py  base.py  course.py  job_posting.py  llm_call.py  plan.py  resume.py  run.py  skill.py  user.py
backend/app/nlp/: audit.py  matcher.py  taxonomy.py  text_clean.py
backend/app/pipeline_one/: __init__.py  state.py
backend/app/pipeline_two/: __init__.py  state.py
backend/app/rag/: __init__.py  ranker.py  retriever.py
backend/app/schemas/: analyze.py  auth.py  dashboard.py  jobs.py  plans.py
backend/app/storage/: r2.py
backend/app/workers/: queue.py  settings.py  tasks.py
backend/data/: companies.README.md  companies.json
backend/data/taxonomy/: CHANGELOG.md  aliases_generated.json  categories.json  skills.json  skills_raw.json
backend/docs/: deploy.md  phase-2-course-corpus.md
backend/scrapers/: README.md  deeplearning_ai.py  load_courses.py
backend/scripts/: build_taxonomy.py  dev.sh  embed_courses.py  generate_aliases.py  map_course_skills.py  seed_all.sh  sync_taxonomy_to_db.py  trigger_jobs.py
backend/tests/: conftest.py
backend/tests/fixtures/: UNMAPPED.md
backend/tests/integration/: test_analyze_routes.py  test_auth_routes.py  test_cost_ledger.py  test_dashboard_routes.py  test_db_schema.py  test_jobs_routes.py  test_pipeline_one_e2e.py  test_pipeline_two_e2e.py  test_plans_routes.py  test_r2.py  test_rag_e2e.py  test_taxonomy_sync.py
backend/tests/unit/: test_companies_json.py  test_csrf.py  (+8 more)
(+271 files in other folders)
